-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.8.0, 5.9.0 Alpha
-
None
The QDebug stream operator for QGeoCoordinate does not specify a floating point precision for the text stream. As a result coordinates are defaulted to printing 6 digits which often truncates them before useful coordinates are expressed.
Additionally some users may not care, but for others the inadvertent logging of coordinates could be considered a security risk. I'd like to propose adding a pair of static methods to QGeoCoordinate that allow getting/setting the default QDebug stream operator real number precision. This will allow flexibility to deal with both cases.