Increase the QGeoCoordinate debug operator precision

The current precision of 6 digits only ever guarantees
110m on Earth. That's not sufficient for some use cases.

A precision of 11 guarantees at least 8 digits after the comma since
there are at most three digits before the comma. The 8th digit
reflects a geographical precision of 1.1 mm on earth. More precision
for navigation purposes is not needed.

Task-number: QTBUG-59259
Change-Id: I4f59c152171c3a71f22aa7520718d0fcb611b697
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>